sytles[change]: on index.html
change style about and anything so same with figma

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <img src="assets/img/panggung/4-panggung.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Panggung Utama</a></h4>
+                <h4 class="title"><a href="fasilitas/panggung-utama" class="stretched-link">Panggung Utama</a></h4>
                 <p class="description">fasilitas inti yang dirancang untuk
                   menampilkan pertunjukan seni</p>
               </div>
@@ -392,7 +392,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Galeri</h2>
+        <h2 class="red-text">Galeri</h2>
         <p>Dokumentasi: Merangkai Momen, Merawat Budaya</p>
       </div><!-- End Section Title -->
 
@@ -413,64 +413,64 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
-              <img src="assets/img/acara/1-acara.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/acara/1-acara.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-panggung">
-              <img src="assets/img/panggung/1-panggung.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/panggung/1-panggung.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-pertemuan">
-              <img src="assets/img/pertemuan/1-pertemuan.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/pertemuan/1-pertemuan.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vip">
-              <img src="assets/img/vip/1-vip.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/vip/1-vip.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-selasar">
-              <img src="assets/img/selasar/1-selasar.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/selasar/1-selasar.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-rias">
-              <img src="assets/img/rias/1-rias.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/rias/1-rias.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
-              <img src="assets/img/dome/1-dome.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/dome/1-dome.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
-              <img src="assets/img/acara/2-acara.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/acara/2-acara.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-panggung">
-              <img src="assets/img/panggung/2-panggung.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/panggung/2-panggung.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-pertemuan">
-              <img src="assets/img/pertemuan/2-pertemuan.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/pertemuan/2-pertemuan.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vip">
-              <img src="assets/img/vip/2-vip.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/vip/2-vip.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-selasar">
-              <img src="assets/img/selasar/2-selasar.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/selasar/2-selasar.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-rias">
-              <img src="assets/img/rias/2-rias.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/rias/2-rias.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
-              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
-              <img src="assets/img/acara/3-acara.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/acara/3-acara.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-panggung">
-              <img src="assets/img/panggung/3-panggung.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/panggung/3-panggung.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vip">
-              <img src="assets/img/vip/3-vip.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/vip/3-vip.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-selasar">
-              <img src="assets/img/selasar/3-selasar.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/selasar/3-selasar.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
-              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
@@ -499,7 +499,7 @@
                 <i class="bi bi-star"></i>
               </div>
 
-              <h4><sup>Rp.</sup>35 JT<span>,-*</span></h4>
+              <h4><sup>Rp.</sup>22,5 JT<span>,-*</span></h4>
               <ul>
                 <li><i class="bi bi-check"></i> <span>Panggung Utama</span></li>
                 <li><i class="bi bi-check"></i> <span>LED Screen P6 (10mX5m)</span></li>
@@ -568,8 +568,8 @@
 
           <div class="col-lg-3">
             <div class="pricing-item featured">
-              <h3>All In</h3>
-              <div class="icon" style="background-color: #aee1f9;">
+              <h3>Paket Platinum</h3>
+              <div class="icon" style="background-color: #000000;">
                 <i class="bi bi-gem"></i>
               </div>
               <h4><sup>Rp.</sup>35 JT<span>,-*</span></h4>
@@ -596,14 +596,18 @@
     </section><!-- /Pricing Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section light-background">
+    <section id="testimonials" class="testimonials section">
       <div class="container">
         <div class="row align-items-center">
 
-          <div class="col-lg-5 info" data-aos="fade-up" data-aos-delay="100">
-            <h3>Apa Kata Mereka</h3>
+          <div class="col-lg-5 info py-3 px-2" data-aos="fade-up" data-aos-delay="100"
+            style="background-color: #ffffffec;">
+            <h3 class="red-text">Apa Kata Mereka</h3>
             <p>
-              Cerita dari mereka yang pernah bikin acara seru di GBS. Yuk simak pengalaman mereka!
+              Cerita dari mereka yang pernah bikin acara seru di GBS
+            </p>
+            <p>
+              Yuk simak pengalaman mereka!
             </p>
           </div>
 
@@ -713,15 +717,15 @@
         <h2>Hubungi Kami</h2>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
 
           <div class="col-lg-6">
 
-            <div class="row gy-4">
-              <div class="col-md-12">
-                <div class="info-item" data-aos="fade" data-aos-delay="200">
+            <div class="row gy-4 align-items-stretch">
+              <div class="col-md-6 h-100">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Alamat</h3>
                   <p> Jl. Al-Fathu No.104, Pamekaran, Kec. Soreang, Kabupaten Bandung</p>
@@ -729,8 +733,32 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <div class="col-md-12">
-                <div class="info-item" data-aos="fade" data-aos-delay="300">
+              <div class="col-md-6 h-100">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                  <i class="bi bi-instagram"></i>
+                  <h3>Instagram</h3>
+                  <p>@Gedongbudayasabilulungan</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="col-md-6 h-100">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="400">
+                  <i class="bi bi-envelope"></i>
+                  <h3>Email</h3>
+                  <small>GedongBudayaSabilulungan<br>@gmail.com</small>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="col-md-6 h-100">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                  <i class="bi bi-tiktok"></i>
+                  <h3>Tiktok</h3>
+                  <p>@Gedongbudayasabilulungan</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="col-md-6 h-100">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Telepon</h3>
                   <p>+62 822 1851 4666</p>
@@ -738,11 +766,11 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <div class="col-md-12">
-                <div class="info-item" data-aos="fade" data-aos-delay="400">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email</h3>
-                  <small>GedongBudayaSabilulungan@gmail.com</small>
+              <div class="col-md-6 h-100">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                  <i class="bi bi-tiktok"></i>
+                  <h3>YouTube</h3>
+                  <p>Gedong Budaya Sabilulungan</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -817,7 +845,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Pesan mu telah terkirim terima kasih</div>
 
-                  <button type="submit">Tanya dan Sewa Sekarang</button>
+                  <button type="submit" class="rounded-4">Tanya dan Sewa Sekarang</button>
                 </div>
 
               </div>
@@ -874,6 +902,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
+  <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
