hotfix: icon miss for youtube icon

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               <img src="assets/img/selasar/3-selasar.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
-              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="">
+              <img src="assets/img/dome/1-dome.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
@@ -768,7 +768,7 @@
 
               <div class="col-md-6 h-100">
                 <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
-                  <i class="bi bi-tiktok"></i>
+                  <i class="bi bi-youtube"></i>
                   <h3>YouTube</h3>
                   <p>Gedong Budaya Sabilulungan</p>
                 </div>
