hotfix: footer icon for socmed

--- a/fasilitas/panggung-utama.html
+++ b/fasilitas/panggung-utama.html
@@ -81,63 +81,62 @@
 
     </section><!-- /Hero Section -->
 
-        <!-- Features Section -->
+    <!-- Features Section -->
     <section id="features" class="features section">
-        <div class="container">
-            <div class="row gy-4 align-items-center features-item">
-                <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-                    <p>
-                      Ruang pertemuan Gedong Budaya Sabilulungan
-                      menghadirkan kenyamanan dan fasilitas lengkap
-                      untuk berbagai aktivitas formal dan komunitas.
-                      Cocok untuk organisasi, komunitas seni, hingga
-                      pelaku usaha yang butuh ruang representatif.
-                    </p>
-                </div>
-                <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out"
-                    data-aos-delay="100">
-                    <div class="image-stack">
-                        <img src="../assets/img/panggung/2-panggung.jpg" alt="" class="stack-front">
-                        <img src="../assets/img/panggung/3-panggung.jpg" alt="" class="stack-back">
-                    </div>
-                </div>
-            </div><!-- Features Item -->
+      <div class="container">
+        <div class="row gy-4 align-items-center features-item">
+          <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+            <p>
+              Ruang pertemuan Gedong Budaya Sabilulungan
+              menghadirkan kenyamanan dan fasilitas lengkap
+              untuk berbagai aktivitas formal dan komunitas.
+              Cocok untuk organisasi, komunitas seni, hingga
+              pelaku usaha yang butuh ruang representatif.
+            </p>
+          </div>
+          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+            <div class="image-stack">
+              <img src="../assets/img/panggung/2-panggung.jpg" alt="" class="stack-front">
+              <img src="../assets/img/panggung/3-panggung.jpg" alt="" class="stack-back">
+            </div>
+          </div>
+        </div><!-- Features Item -->
 
-            <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-                <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-                    <img src="../assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
-                </div>
-                <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-                    <h3>FASILITAS & SPESIFIKASI</h3>
-                    <ul>
-                      <li><i class="bi bi-dot"></i><span>Kapasitas hingga 50 peserta</span></li>
-                      <li><i class="bi bi-dot"></i><span>Proyektor & layar presentasi</span></li>
-                      <li><i class="bi bi-dot"></i><span>Meja dan kursi ergonomis</span></li>
-                      <li><i class="bi bi-dot"></i><span>Sound system & mikrofon</span></li>
-                      <li><i class="bi bi-dot"></i><span>Flipchart / papan tulis</span></li>
-                      <li><i class="bi bi-dot"></i><span>Wi-Fi cepat & stabil</span></li>
-                      <li><i class="bi bi-dot"></i><span>AC & pencahayaan nyaman</span></li>
-                    </ul>
-                </div>
-            </div><!-- Features Item -->
+        <div class="row gy-4 align-items-stretch justify-content-between features-item ">
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+            <img src="../assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3>FASILITAS & SPESIFIKASI</h3>
+            <ul>
+              <li><i class="bi bi-dot"></i><span>Kapasitas hingga 50 peserta</span></li>
+              <li><i class="bi bi-dot"></i><span>Proyektor & layar presentasi</span></li>
+              <li><i class="bi bi-dot"></i><span>Meja dan kursi ergonomis</span></li>
+              <li><i class="bi bi-dot"></i><span>Sound system & mikrofon</span></li>
+              <li><i class="bi bi-dot"></i><span>Flipchart / papan tulis</span></li>
+              <li><i class="bi bi-dot"></i><span>Wi-Fi cepat & stabil</span></li>
+              <li><i class="bi bi-dot"></i><span>AC & pencahayaan nyaman</span></li>
+            </ul>
+          </div>
+        </div><!-- Features Item -->
 
-            <div class="row gy-4 align-items-stretch justify-content-between features-item ">
-                <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-                    <h3>COCOK DIGUNAKAN UNTUK</h3>
-                    <ul>
-                      <li><i class="bi bi-dot"></i><span>Rapat organisasi & komunitas</span></li>
-                      <li><i class="bi bi-dot"></i><span>Workshop pelatihan & seminar kecil</span></li>
-                      <li><i class="bi bi-dot"></i><span>Diskusi terbuka & forum kreatif</span></li>
-                      <li><i class="bi bi-dot"></i><span>Presentasi bisnis & pitching ide</span></li>
-                    </ul>
-                    <a href="#" class="btn btn-get-started align-self-start">Sewa Sekarang</a>
-                </div>
-                <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-                    <img src="../assets/img/panggung/5-panggung.jpg" class="img-fluid" alt="">
-                </div>
-            </div><!-- Features Item -->
+        <div class="row gy-4 align-items-stretch justify-content-between features-item ">
+          <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3>COCOK DIGUNAKAN UNTUK</h3>
+            <ul>
+              <li><i class="bi bi-dot"></i><span>Rapat organisasi & komunitas</span></li>
+              <li><i class="bi bi-dot"></i><span>Workshop pelatihan & seminar kecil</span></li>
+              <li><i class="bi bi-dot"></i><span>Diskusi terbuka & forum kreatif</span></li>
+              <li><i class="bi bi-dot"></i><span>Presentasi bisnis & pitching ide</span></li>
+            </ul>
+            <a href="#" class="btn btn-get-started align-self-start">Sewa Sekarang</a>
+          </div>
+          <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
+            <img src="../assets/img/panggung/5-panggung.jpg" class="img-fluid" alt="">
+          </div>
+        </div><!-- Features Item -->
 
-        </div>
+      </div>
 
     </section><!-- /Features Section -->
 
@@ -152,10 +151,9 @@
             <span class="sitename">Gedung Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-youtube"></i></a>
+            <a href=""><i class="bi bi-tiktok"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
