hoftix: navbar and fasilitas page

--- a/fasilitas/panggung-utama.html
+++ b/fasilitas/panggung-utama.html
@@ -87,11 +87,9 @@
         <div class="row gy-4 align-items-center features-item">
           <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
             <p>
-              Ruang pertemuan Gedong Budaya Sabilulungan
-              menghadirkan kenyamanan dan fasilitas lengkap
-              untuk berbagai aktivitas formal dan komunitas.
-              Cocok untuk organisasi, komunitas seni, hingga
-              pelaku usaha yang butuh ruang representatif.
+              Panggung utama Gedong Budaya Sabilulungan merupakan fasilitas inti yang dirancang untuk menampilkan
+              pertunjukan seni, teater, konser, seminar, dan acara budaya resmi lainnya. Dilengkapi dengan teknologi
+              pencahayaan dan tata suara profesional
             </p>
           </div>
           <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
@@ -109,13 +107,15 @@
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>FASILITAS & SPESIFIKASI</h3>
             <ul>
-              <li><i class="bi bi-dot"></i><span>Kapasitas hingga 50 peserta</span></li>
-              <li><i class="bi bi-dot"></i><span>Proyektor & layar presentasi</span></li>
-              <li><i class="bi bi-dot"></i><span>Meja dan kursi ergonomis</span></li>
-              <li><i class="bi bi-dot"></i><span>Sound system & mikrofon</span></li>
-              <li><i class="bi bi-dot"></i><span>Flipchart / papan tulis</span></li>
-              <li><i class="bi bi-dot"></i><span>Wi-Fi cepat & stabil</span></li>
-              <li><i class="bi bi-dot"></i><span>AC & pencahayaan nyaman</span></li>
+              <li><i class="bi bi-dot"></i><span>Kapasitas ±840 orang</span></li>
+              <li><i class="bi bi-dot"></i><span>Sound System Profesional</span></li>
+              <li><i class="bi bi-dot"></i><span>Lighting Stage & Lampu Sorot 2.500</span></li>
+              <li><i class="bi bi-dot"></i><span>LED Display 6m x 11m</span></li>
+              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
+              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
+              <li><i class="bi bi-dot"></i><span>Gun Smoke</span></li>
+              <li><i class="bi bi-dot"></i><span>Meja Dorong</span></li>
+              <li><i class="bi bi-dot"></i><span>Daya Listrik 40.000 Watt</span></li>
             </ul>
           </div>
         </div><!-- Features Item -->
@@ -124,10 +124,11 @@
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>COCOK DIGUNAKAN UNTUK</h3>
             <ul>
-              <li><i class="bi bi-dot"></i><span>Rapat organisasi & komunitas</span></li>
-              <li><i class="bi bi-dot"></i><span>Workshop pelatihan & seminar kecil</span></li>
-              <li><i class="bi bi-dot"></i><span>Diskusi terbuka & forum kreatif</span></li>
-              <li><i class="bi bi-dot"></i><span>Presentasi bisnis & pitching ide</span></li>
+              <li><i class="bi bi-dot"></i><span>Pertunjukan seni & budaya</span></li>
+              <li><i class="bi bi-dot"></i><span>Konser musik</span></li>
+              <li><i class="bi bi-dot"></i><span>Seminar, talkshow, workshop</span></li>
+              <li><i class="bi bi-dot"></i><span>Acara korporat & peluncuran produk</span></li>
+              <li><i class="bi bi-dot"></i><span>Festival & pameran tematik</span></li>
             </ul>
             <a href="#" class="btn btn-get-started align-self-start">Sewa Sekarang</a>
           </div>
@@ -148,7 +149,7 @@
       <div class="row gy-4">
         <div class="col-lg-12 col-md-12 footer-about">
           <a href="/" class="logo d-flex align-items-center">
-            <span class="sitename">Gedung Budaya Sabililulungan</span>
+            <span class="sitename">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-youtube"></i></a>
